# databricks-utils

./: CREATE_OR_UPDATE_GUIDE.md  DRY_RUN_GUIDE.md  IMPORT_GUIDE.md  INSTALLATION.md  MANIFEST.in  PIPELINES_API.md  README.md  main.py  pyproject.toml
examples/: create_or_update_example.py  dry_run_example.py  import_styles_demo.py  pipeline_example.py  quick_start.py
prompts/: dataset.md
src/databricks_utils/: __init__.py  client.py  jobs.py  workspace.py
src/databricks_utils/pipelines/: __init__.py  core.py
tests/: __init__.py  test_client.py  test_create_or_update.py  test_dry_run.py  test_pipelines.py
